Fixed th text-align.

--- a/assets/css/combined.css
+++ b/assets/css/combined.css
@@ -867,6 +867,7 @@ footer a{
 
 #main table th{
 	width: 100px;
+	text-align: left;
 }
 
 #main table table th{
